Add README html to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
 *.class
+*.jar
+.hg/
+.hgignore
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
+/checkouts
+/classes
+/target
+README.html
+pom.xml
+pom.xml.asc
